--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,10 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql:42.5.4'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testImplementation 'org.mockito:mockito-junit-jupiter'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.assertj:assertj-core:3.24.2'
+
 }
 
 test {
