--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,12 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    //implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.data:spring-data-jpa:3.1.4'
+    implementation 'org.springframework.boot:spring-boot-starter-web:3.1.3'
+
+
+    implementation 'javax.websocket:javax.websocket-api:1.1'
 
     compileOnly 'org.projectlombok:lombok'
 
