--- a/web-client/build.gradle
+++ b/web-client/build.gradle
@@ -14,12 +14,18 @@ repositories {
 dependencies {
     implementation 'org.springframework.data:spring-data-jpa:3.1.4'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
+    implementation 'org.springframework.boot:spring-boot-starter-web:3.1.3'
+    implementation 'org.json:json:20230618'
+    //implementation 'org.springframework.boot:spring-boot-starter-websocket:3.1.4'
+
+    implementation 'org.java-websocket:Java-WebSocket:1.5.4'
+
 
     implementation 'org.springframework:spring-beans:6.0.12'
     implementation 'org.springframework:spring-web:6.0.12'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.projectlombok:lombok:1.18.22'
+    //implementation 'org.projectlombok:lombok:1.18.22'
 
     runtimeOnly 'com.h2database:h2'
 
