--- a/build.gradle
+++ b/build.gradle
@@ -11,4 +11,8 @@ repositories {
 }
 
 dependencies {
+
+    /*testImplementation 'org.springframework.boot:spring-boot-starter-test' {
+        exclude group: 'com.vaadin.external.google", module:"android-json'
+    }*/
 }
