--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,12 +15,26 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.json:json:20230618'
     implementation 'org.java-websocket:Java-WebSocket:1.5.4'
+    // https://mvnrepository.com/artifact/org.springframework/spring-websocket
+    implementation 'org.springframework:spring-websocket:6.0.13'
 
     runtimeOnly 'org.postgresql:postgresql:42.5.4'
     implementation 'com.h2database:h2:2.2.224'
+
+    testImplementation("org.springframework.boot:spring-boot-starter-test") {
+        exclude group: "com.vaadin.external.google", module:"android-json"
+    }
+
     testImplementation 'com.github.tomakehurst:wiremock:3.0.1'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    //testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.integration:spring-integration-test'
+    testImplementation 'org.testcontainers:testcontainers:1.17.6'
+    testImplementation 'org.testcontainers:junit-jupiter:1.17.6'
+
+    implementation 'ch.qos.logback:logback-classic:1.4.7'
+    implementation 'org.slf4j:slf4j-api:2.0.5'
+
+    implementation 'org.apache.kafka:kafka-clients:3.6.0'
 
 }
 
