--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 api_host=wss://stream.binance.com:9443/ws/
-#api_host=wss://stream.binance.com:9443/ws/btcusdt@trade
 spring.scan.package=com.rate.app
 
+logging.level.org.springframework.web.socket.client.WebSocketClient=DEBUG
+logging.level.org.java_websocket=DEBUG
 
 spring.datasource.url=jdbc:h2:mem:crypto
 spring.datasource.username=postgres
-#spring.datasource.password=12345
 
 spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
@@ -15,3 +15,9 @@ spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
+
+#Appender
+logging.level.com.crypto.infrastructure.adapters.outbound.http.BinanceWebSocketClient=DEBUG
+logging.file.max-history=7
+logging.file.max-size=10MB
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
